fixed layout and spacing for section and div containers. Turned off overflow of h3 in store results Added icon for user create store Event listener not working for clicking on result and adding details class

--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(shopping-cart.jpg);
+    /*background-image: url(shopping-cart.jpg);*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -20,23 +20,25 @@ body {
     display: none;
 }
 
+
+/* Contains the form that enables user to log in */
+
 .user-login {
     margin: 25% 35% 0 35%;
     text-align: center;
+    background-color: red;
 }
 
-h1,
-h4 {
+/* Title on landing */
+h1 {
     color: #fff;
     font-weight: bold;
     font-family: Helvetica;
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
-}
-
-h1 {
     font-size: 40px;
 }
 
+/* Contains the forms for creating stores/accounts */
 .new-store,
 .new-account {
     margin: 15px 10% 10px 10%;
@@ -63,16 +65,13 @@ input[type=textarea] {
     height: 100px;
 }
 
-#store-modal {
-    display: none;
-}
-
 .store-result {
     /*border-radius: 10px;*/
     border: solid black 1px;
     padding: 10px 8% 10px 8%;
     /*margin: 15px 10% 15px 10%;*/
-    background-color: #ADD8E6;
+    background-color: yellow;
+    /*background-color: #ADD8E6;*/
     /* light blue */
     width: 100%;
 }
@@ -119,9 +118,9 @@ input[type=submit]:hover {
 /** templating attempt **/
 
 .store-list {
-    margin: 50px 20% 50px 20%;
-    padding: 50px;
-    background-color: rgba(255, 255, 255, 0.8);
+    margin: 75px 10% 75px 10%;
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    background-color: blue;
 }
 
 
@@ -132,21 +131,25 @@ input[type=submit]:hover {
     background-color: white;
     border: 6px ridge gray;
     border-radius: 10px;
-    margin: 0px 15px 75px 15px;
-    padding: 10px;
-    width: 225px;
-    height: 300px;
-    display: inline-block;
+    margin-bottom: 30px;
+    padding: 4px 100px 4px 25px;
+    /* padding right for tier medal*/
+    height: 88px;
 }
 
 .store-result-box h3 {
-    padding-top: 30px;
     font-size: 20px;
-    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    /*max-height: 20px;*/
+    max-width: 90%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .store-result-box p {
-    padding-left: 25px;
+    margin: 0px;
 }
 
 .tier-round {
@@ -154,21 +157,28 @@ input[type=submit]:hover {
     margin-right: auto;
     display: block;
     position: absolute;
-    top: -68px;
-    left: 68px;
-    width: 100px;
-    height: 100px;
+    top: 0px;
+    right: 0px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
     border: 6px ridge gray;
     background-color: white;
 }
 
+
+/*.tier-medal img {*/
+
 img {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 90px;
+    width: 75px;
     position: relative;
     top: 5px;
     left: 0px;
+}
+
+#add-store-button {
+    width: 40px;
 }
